[index]fix z-indexv2

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -11,6 +11,7 @@ canvas { position:fixed; top:0; left:0; z-index:-2; }
 
 a{
     text-decoration: none;
+    z-index: 10;
 }
 
 .outer {
